Causeview Package Complete/src/objects/Event_Level_Benefit__c.object
<CustomObject>
    <description>Causeview - benefits related to specific Event Level</description>
    <fields>
        <fullName>Benefit_Description__c</fullName>
        <description>Benefit description  - referenced from Product</description>
        <formula>Benefit__r.Short_Description__c</formula>
        <label>Benefit Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Benefit included with Event Level</description>
        <inlineHelpText>Benefit included with Event Level</inlineHelpText>
        <label>Benefit</label>
        <referenceTo>Benefit__c</referenceTo>
        <relationshipLabel>Event Levels</relationshipLabel>
        <relationshipName>Event_Level_Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Level__c</fullName>
        <description>Event Level the benefit is applied to</description>
        <label>Event Level</label>
        <referenceTo>Event_Level__c</referenceTo>
        <relationshipName>Benefits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Benefit - general notes</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Quantity of benefit</description>
        <label>Quantity</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Benefit_Value__c</fullName>
        <description>Total value for benefit - non taxable</description>
        <inlineHelpText>Total value for benefit - non taxable</inlineHelpText>
        <label>Total Benefit Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Event Level Benefit</label>
    <nameField>
        <displayFormat>ELB-{000000}</displayFormat>
        <label>Benefits No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Level Benefits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>